--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,9 @@
 SILICA
 
+0.1.2-alpha / release date: 03/19/2021
+ADDED
+-sound
+
 0.1.1-alpha / release date: 01/12/2021
 ADDED
 -map key to wander
